[package]
name = "jib_to_llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { workspace = true }
isla-lib = { path = "../../../sail-projects/isla/isla-lib" }
petgraph = "0.5.1"

[build-dependencies]
lalrpop = "0.20.0"
